add :: Iamage adding to products

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2457,6 +2457,7 @@ ul.list-1.alt i:before {
 
 .project-1-image img {
 	width: 100%;
+	height: 250px;
 }
 .project-1-block {
 	margin-bottom: 30px;
