--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1,6 +1,6 @@
 @media only screen and (max-width: 7000px){
 	.page-wrapper{
-		overflow: hidden;
+		/* overflow: hidden; */
 	}
 }
 @media only screen and (max-width: 1500px){
